# Interactive-OpenSSL-VM

./: .gitignore  Cargo.toml  README.md  context.md
crates/crypto/: Cargo.toml
crates/crypto/src/: aes.rs  hash.rs  lib.rs  pbkdf2.rs  rsa.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: ast.rs  compiler.rs  lexer.rs  lib.rs  parser.rs
crates/vm-core/: Cargo.toml
crates/vm-core/src/: error.rs  instruction.rs  lib.rs  opcode.rs  trace.rs  verifier.rs  vm.rs
crates/vm-core/tests/: vm_integration.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/layout/: Footer.tsx  Header.tsx
ui/src/components/vm/: InstructionSet.tsx  LearningCenter.tsx  StackInspector.tsx  Terminal.tsx
ui/src/hooks/: useVm.ts
ui/src/pages/: VmPage.tsx
ui/src/services/: openSslService.ts  vmService.ts
ui/src/types/: vm.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
