[package]
name = "openssl-vm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
vm-core = { path = "../crates/vm-core" }
crypto = { path = "../crates/crypto" }
dsl = { path = "../crates/dsl" }
serde_json = "1.0"
serde = { workspace = true, features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
